# deusmagi-client

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  atrinik  atrinik.desktop  build.config  build.sh  client.cfg  deusmagi.bat
src/: cmake.txt
src/client/: animations.c  client.c  cmd_aliases.c  commands.c  image.c  item.c  keybind.c  main.c  menu.c  metaserver.c  misc.c  player.c  region_map.c  resources.c  server_files.c  server_settings.c  settings.c  socket.c  sound.c  sprite.c  texture.c  tilestretcher.c  updates.c  upgrader.c  video.c  wrapper.c
src/events/: event.c  keys.c  move.c
src/gui/misc/: effects.c  game_news.c  intro.c
src/gui/popups/: book.c  characters.c  color_chooser.c  credits.c  help.c  interface.c  login.c  painting.c  region_map.c  server_add.c  settings.c  settings_client.c  settings_keybinding.c  updater.c
src/gui/toolkit/: SDL_rotozoom.c  button.c  color_picker.c  list.c  popup.c  progress.c  range_buttons.c  scrollbar.c  text.c  text_input.c  tooltip.c  widget.c
src/gui/toolkit/include/: button.h  color_picker.h  list.h  popup.h  progress.h  scrollbar.h  text.h  text_input.h  widget.h
src/gui/widgets/: active_effects.c  buddy.c  container.c  fps.c  input.c  inventory.c  label.c  map.c  mapname.c  menu.c  menu_buttons.c  minimap.c  mplayer.c  network_graph.c  notification.c  party.c  playerdoll.c  playerinfo.c  protections.c  quickslots.c  skills.c  spells.c  stat.c  target.c  texture.c  textwin.c
src/include/: book.h  client.h  commands.h  config.h  effects.h  event.h  global.h  ignore.h  image.h  interface.h  inventory.h  item.h  keybind.h  main.h  map.h  menu.h  misc.h  network_graph.h  notification.h  party.h  player.h  proto.h  region_map.h  resources.h  server_files.h  server_settings.h  settings.h  sound.h  sprite.h  texture.h  textwin.h  updater.h  version.h
src/updater/: main.c
